Adjusted trait modal styling, fixed ranking jump
Changed trait display from a table to flexbox. Fixed the animated jump when opening the rankings so the correct content appears on screen.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2628,20 +2628,19 @@ a.download-csv{
 }
 
 .modal .traits > div{
-	display:table;
+	display:flex;
 	width:100%;
 
 	.name{
-		display:table-cell;
 		font-weight:bold;
 		font-size:14px;
-		width:100px;
+		flex-basis:35%;
 	}
 
 	.desc{
-		display:table-cell;
 		font-size:12px;
 		padding-left:5px;
+		flex-basis:65%;
 	}
 }
 
